<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="12dp"
    android:gravity="top|center_horizontal"
    android:orientation="vertical"
    tools:context=".view.ViewLogFragment">

    <View
        android:id="@+id/dividerTop"
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:layout_marginVertical="16dp"
        android:background="@color/pink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/viewLogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="@string/dream_log"
        android:textColor="#702963"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/dividerMiddle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerTop"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/dividerMiddle"
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:layout_marginVertical="16dp"
        android:background="@color/pink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.185" />

    <View
        android:id="@+id/dividerInvis"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginVertical="16dp"
        android:background="@color/black"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/filterLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerMiddle"
        app:layout_constraintVertical_bias="0.386" />

    <TextView
        android:id="@+id/filterLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:text="@string/filter_dreams"
        android:textColor="#702963"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-smallcaps"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerMiddle" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerMiddle">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/filterText"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/enter_keywords" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/filterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textStyle="bold"
            android:fontFamily="casual"
            android:backgroundTint="@color/rosewood"
            android:text="@string/filter" />

        <Button
            android:id="@+id/clearFilterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textStyle="bold"
            android:fontFamily="casual"
            android:backgroundTint="@color/delft_blue"
            android:text="@string/clear" />
    </LinearLayout>

    <TextView
        android:id="@+id/emptyMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/no_dreams"
        android:textColor="#702963"

        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.528" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dreamsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="429dp"
        android:layout_marginTop="95dp"
        android:layout_marginBottom="204dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
        app:layout_constraintVertical_bias="0.228" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:fontFamily="casual"
        android:backgroundTint="@color/dusty_lavender"
        android:text="@string/back_to_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />


</androidx.constraintlayout.widget.ConstraintLayout>
