...
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:background="@color/pink" />


            <TextView
                android:id="@+id/authTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/auth_title"
                android:textColor="#702963"
...
                android:layout_marginBottom="12dp"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/username_hint"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />


            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />
...
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/signInButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/rosewood"
                    android:textStyle="bold"
                    android:fontFamily="casual"
                    android:text="@string/sign_in" />
...
